k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: http-server
        image: http-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
